[package]
name = "vesper"
version = "1.0.0"
authors = ["Berkus Decker <berkus@metta.systems>"]
description = "Vesper exokernel"
documentation = "https://doc.metta.systems/vesper"
repository = "https://github.com/metta-systems/vesper"
readme = "README.md"
license = "BSL-1.0"
build = "build.rs"
categories = ["no-std"]

[features]
unstable = []

#[lib]
#name = "nucleus"
#path = "src/lib.rs"
#crate-type = ["staticlib"]

[build-dependencies]
maplit = "0.1.3"

[dependencies]
rlibc = "1.0.0"
bitflags = "1.0.1"

# by japaric:
# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
